// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapStatusCheck > adds boost info 1`] = `
[
  [
    [
      {
        "data": {
          "filterData": {
            "name": "SWAP_COMPLETED",
            "usdValue": 78725.5517676093,
          },
          "message": "🦈 Swap <strong><a href="https://scan.chainflip.io/swaps/103899">#103899</a></strong>
📥 <strong>1.030556 BTC</strong> ($78,624.35)
📤 <strong>78,565.74453 USDC on Ethereum</strong> ($78,725.55)
⏱️ Took: <strong>10 min</strong>
🟢 Delta: <strong>$101.20</strong> (0.13%)
📓 Chunks: <strong>26/26</strong>
⚡ <strong>Boosted</strong> for <strong>$39.31</strong>
🏦 via <strong><a href="https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7">Chainflip SDK</a></strong>",
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "SWAP_COMPLETED",
            "usdValue": 78725.5517676093,
          },
          "message": "🦈 Swap **[#103899](https://scan.chainflip.io/swaps/103899)**
📥 **1.030556 BTC** ($78,624.35)
📤 **78,565.74453 USDC on Ethereum** ($78,725.55)
⏱️ Took: **10 min**
🟢 Delta: **$101.20** (0.13%)
📓 Chunks: **26/26**
⚡ **Boosted** for **$39.31**
🏦 via **[Chainflip SDK](https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7)**",
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "filterData": {
            "name": "SWAP_COMPLETED",
            "usdValue": 78725.5517676093,
          },
          "message": "🦈 Swap https://scan.chainflip.io/swaps/103899
📥 1.030556 BTC ($78,624.35)
📤 78,565.74453 USDC on Ethereum ($78,725.55)
⏱️ Took: 10 min
🟢 Delta: $101.20 (0.13%)
📓 Chunks: 26/26
⚡ Boosted for $39.31
🏦 via Chainflip SDK
#chainflip $flip",
          "platform": "twitter",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`swapStatusCheck > check fresh swap status and send swap info message 1`] = `
[
  [
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 5611.3799573378,
        },
        "message": "🦐 Swap <strong><a href="https://scan.chainflip.io/swaps/77697">#77697</a></strong>
📥 <strong>5,000 FLIP on Ethereum</strong> ($5,568.07)
📤 <strong>5,616.094932 USDT on Ethereum</strong> ($5,611.38)
⏱️ Took: <strong>1 min</strong>
🟢 Delta: <strong>$43.31</strong> (0.78%)
📓 Chunks: <strong>2/2</strong>
🏦 via <strong><a href="https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7">Chainflip SDK</a></strong>",
        "platform": "telegram",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 5611.3799573378,
        },
        "message": "🦐 Swap **[#77697](https://scan.chainflip.io/swaps/77697)**
📥 **5,000 FLIP on Ethereum** ($5,568.07)
📤 **5,616.094932 USDT on Ethereum** ($5,611.38)
⏱️ Took: **1 min**
🟢 Delta: **$43.31** (0.78%)
📓 Chunks: **2/2**
🏦 via **[Chainflip SDK](https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7)**",
        "platform": "discord",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 5611.3799573378,
        },
        "message": "🦐 Swap https://scan.chainflip.io/swaps/77697
📥 5,000 FLIP on Ethereum ($5,568.07)
📤 5,616.094932 USDT on Ethereum ($5,611.38)
⏱️ Took: 1 min
🟢 Delta: $43.31 (0.78%)
📓 Chunks: 2/2
🏦 via Chainflip SDK
#chainflip $flip",
        "platform": "twitter",
      },
      "name": "messageRouter",
    },
  ],
]
`;

exports[`swapStatusCheck > contains affiliate broker info in swap message 1`] = `
[
  [
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 1593.7622579566,
        },
        "message": "🦐 Swap <strong><a href="https://scan.chainflip.io/swaps/106523">#106523</a></strong>
📥 <strong>0.5 ETH on Ethereum</strong> ($1,618.99)
📤 <strong>7.429231 SOL</strong> ($1,593.76)
⏱️ Took: <strong>1 min</strong>
⚪️ Delta: <strong>-$25.22</strong> (-1.56%)
🏦 via <strong><a href="https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7">Chainflip SDK</a></strong>",
        "platform": "telegram",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 1593.7622579566,
        },
        "message": "🦐 Swap **[#106523](https://scan.chainflip.io/swaps/106523)**
📥 **0.5 ETH on Ethereum** ($1,618.99)
📤 **7.429231 SOL** ($1,593.76)
⏱️ Took: **1 min**
⚪️ Delta: **-$25.22** (-1.56%)
🏦 via **[Chainflip SDK](https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7)**",
        "platform": "discord",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 1593.7622579566,
        },
        "message": "🦐 Swap https://scan.chainflip.io/swaps/106523
📥 0.5 ETH on Ethereum ($1,618.99)
📤 7.429231 SOL ($1,593.76)
⏱️ Took: 1 min
⚪️ Delta: -$25.22 (-1.56%)
🏦 via Chainflip SDK
#chainflip $flip",
        "platform": "twitter",
      },
      "name": "messageRouter",
    },
  ],
]
`;

exports[`swapStatusCheck > subtracts out the refund egress amount from the ingress amount 1`] = `
[
  [
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 17206.1360813008,
        },
        "message": "🐟 Swap <strong><a href="https://scan.chainflip.io/swaps/103045">#103045</a></strong>
📥 <strong>37,803.801528 FLIP on Ethereum</strong> ($48,254.63)
📤 <strong>5.939236 ETH on Ethereum</strong> ($17,206.14)
↩️ <strong>24,455.099318 FLIP on Ethereum</strong> ($31,269.46)
⏱️ Took: <strong>18 min</strong>
🟢 Delta: <strong>$167.19</strong> (0.98%)
📓 Chunks: <strong>6/17</strong>
🏦 via <strong><a href="https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7">Chainflip SDK</a></strong>",
        "platform": "telegram",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 17206.1360813008,
        },
        "message": "🐟 Swap **[#103045](https://scan.chainflip.io/swaps/103045)**
📥 **37,803.801528 FLIP on Ethereum** ($48,254.63)
📤 **5.939236 ETH on Ethereum** ($17,206.14)
↩️ **24,455.099318 FLIP on Ethereum** ($31,269.46)
⏱️ Took: **18 min**
🟢 Delta: **$167.19** (0.98%)
📓 Chunks: **6/17**
🏦 via **[Chainflip SDK](https://scan.chainflip.io/brokers/cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7)**",
        "platform": "discord",
      },
      "name": "messageRouter",
    },
    {
      "data": {
        "filterData": {
          "name": "SWAP_COMPLETED",
          "usdValue": 17206.1360813008,
        },
        "message": "🐟 Swap https://scan.chainflip.io/swaps/103045
📥 37,803.801528 FLIP on Ethereum ($48,254.63)
📤 5.939236 ETH on Ethereum ($17,206.14)
↩️ 24,455.099318 FLIP on Ethereum ($31,269.46)
⏱️ Took: 18 min
🟢 Delta: $167.19 (0.98%)
📓 Chunks: 6/17
🏦 via Chainflip SDK
#chainflip $flip",
        "platform": "twitter",
      },
      "name": "messageRouter",
    },
  ],
]
`;
